@@ -193,6 +193,9 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     Thanks to Jonathan Nieder <jrnieder@gmail.com>. Closes: #635683
   * Clarify the default dpkg-deb compression-levels on the man page.
   * Clarify dpkg --update-avail usage error message. Closes: #628055
+  * Change Dpkg::Compression default values depending on the compressor
+    used, and as such dpkg-source inherits this functionality.
+    Prompted by Timo Juhani Lindfors <timo.lindfors@iki.fi>.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim). Closes: #620312
